--- a/src/sass/type.scss
+++ b/src/sass/type.scss
@@ -35,10 +35,6 @@ h2 {
   }
 }
 
-h5 {
-	font-weight: 700;
-}
-
 h6 {
 	font-weight: 800;
 	text-transform: uppercase;
@@ -88,5 +84,11 @@ p.number {
   text-align: center;
   width: 60px;
   height: 60px;
+  @include media-breakpoint-down(md) {
+    font-size: 1.8rem;
+    width: 50px;
+    height: 50px;
+  }
 }
+
 
